@@ -1,6 +1,10 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+31-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
+	Fixed FileMgr::trunc if trunc should be empty was
+		leaving a 1 byte (null) file, instead of empty.
+
 30-Jul-2002     Troy A. Griffitts <scribe@crosswire.org>
 	Fixed zLD link bug where resolving incorrectly
 		skipped IDXENTRYSIZE instead of 6 ("@LINK ").
